content/vault/v1.4.x/content/docs/commands/kv/rollback.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: kv rollback - Command
sidebar_title: <code>rollback</code>
description: |-
  The "kv rollback" command restores a given previous version to the current
  version at the given path.
---

# kv rollback

~> **NOTE:** This is a [K/V Version 2](/vault/docs/secrets/kv/kv-v2) secrets
engine command, and not available for Version 1.

The `kv rollback` command restores a given previous version to the current
version at the given path. The value is written as a new version; for instance,
if the current version is 5 and the rollback version is 2, the data from version
2 will become version 6. This command makes it easy to restore unintentionally
overwritten data.

## Examples

Restores the version 2 of the data at key "creds":

```text
$ vault kv rollback -version=2 secret/creds
Key              Value
---              -----
created_time     2019-06-06T17:07:19.299831Z
deletion_time    n/a
destroyed        false
version          6
```

## Usage

There are no flags beyond the [standard set of flags](/vault/docs/commands)
included on all commands.

### Output Options

- `-format` `(string: "table")` - Print the output in the given format. Valid
  formats are "table", "json", or "yaml". This can also be specified via the
  `VAULT_FORMAT` environment variable.

### Command Options

- `-version` `(int: 0)` - Specifies the version number that should be made
  current again.
